Editor is set to readOnly for any files that shouldn't change (README, update notes), including empty editor window while navigating.
Deleting a file or project will now also delete a corresponding scheduled job from the queue.
Errors cloning repositories are sent to the front-end now.
Error handling for most git commands now.  Notifications visible in webide for failures.
Creating files and folders will automatically open them in the editor and navigator.
Uploaded files will always use the current working directory, instead of uploading to the parent directory now.
git pull commands are now using the quiet (-q) flag.

-0.3.6
Update Font Awesome to latest version
Fix for git commit and push when settings are already configured
Modify socket.io for better performance

-0.3.5
Fix crashing on startup of new installations.

-0.3.4
Fix for code not getting pushed out to remote repository.
List folders and files alphabetically.
Remove long running call causing slowdowns.

-0.3.3
Add four new settings to the Settings Page
  -Use Soft Tabs (on or off)
  -Tab Size (2, 4, 6, or 8)
  -Show Invisibles (on or off) (shows whitespaces, tabs and spaces, etc)
  -Manual Git Commits and Pushes
Add ability to manually commit and push file changes.  This includes adding comments.
  -Do a git status on the file to check if it is in need of a commit and push, and populate editor bar.
Set editor defaults to use soft tabs with a setting of 4 tab size, and show invisibles off
Add a default .gitignore file to reduce chance of .pyc files getting pushed out to bitbucket.
Fix for the terminal getting out of sync with the editor
Prevent overwriting of Adafruit project files
Update manual installation instructions
Install node.js as part of installation again.

-0.3.2
Navigator: Add ability to create folders at all levels.
Debugger: Fix display of local vs global variables.
Terminal: Set terminal width based on containing parent, use entire width and height.