@@ -1,0 +1,9 @@
+extends layout
+
+block content
+  #login-wrapper
+    #login-content
+      p There was an error with your request.  Please try again, or visit 
+        a(href="http://learn.adafruit.com/webide/faq") the FAQ for assistance
+        | .
+      p #{error}
