@@ -1,0 +1,13 @@
+extends layout
+
+block content
+  #login-wrapper
+    #login-content
+      p There was an error signing in.  It could be any number of reasons, but first ensure that your date/time is set accurately on your Pi.
+        | For More help, visit 
+        a(href="http://learn.adafruit.com/webide/faq") the FAQ for assistance
+        | .
+      p To try and repair the error, by setting your date and time, click the below link.  You will be redirected to the login page after 5-10 seconds to try login in again.
+      p
+        a(href="/set-datetime") Set the Date and Time
+      p #{error}
