@@ -17,6 +17,7 @@ Editor is set to readOnly for any files that shouldn't change (README, update no
 Deleting a file or project will now also delete a corresponding scheduled job from the queue.
 Errors cloning repositories are sent to the front-end now.
 Error handling for most git commands now.  Notifications visible in webide for failures.
+Attempt to set the date on the Pi during installation to prevent OAuth errors.
 Creating files and folders will automatically open them in the editor and navigator.
 Uploaded files will always use the current working directory, instead of uploading to the parent directory now.
 git pull commands are now using the quiet (-q) flag.
